fix spacing

--- a/src/_scss/pages/search/_collapsibleSidebar.scss
+++ b/src/_scss/pages/search/_collapsibleSidebar.scss
@@ -4,6 +4,7 @@
   0% {
     width: 0%;
   }
+
   100% {
     width: 100%;
   }
@@ -13,6 +14,7 @@
   0% {
     width: 100%;
   }
+
   100% {
     width: 0%;
   }
@@ -24,6 +26,7 @@
     transform: translateX(24px);
     visibility: hidden;
   }
+
   100% {
     transform: translateX(0);
     visibility: visible;
@@ -35,10 +38,12 @@
   background-color: $color-white;
   box-shadow: unset;
   border-radius: unset;
+
   @media(max-width: $medium-screen - 1) {
     left: 0;
     width: 100%;
   }
+
   .chevron {
     margin: auto;
     color: $blue-50;
@@ -50,6 +55,7 @@
     @media(max-width: $medium-screen - 1) {
       display: none;
     }
+
     position: relative;
     float: right;
     margin-right: -12px;
@@ -89,12 +95,17 @@
       //animation: collapsible-sidebar-slideclose 0.25s forwards;
       //-webkit-animation: collapsible-sidebar-slideclose 0.25s forwards;
 
-      .sidebar-bottom-submit, .search-filter__container, .collapsible-sidebar--header, .collapsible-sidebar--drilldown, .collapsible-sidebar--main-menu {
+      .sidebar-bottom-submit,
+      .search-filter__container,
+      .collapsible-sidebar--header,
+      .collapsible-sidebar--drilldown,
+      .collapsible-sidebar--main-menu {
         display: none;
       }
     }
 
-    .categories-list, .category-filter {
+    .categories-list,
+    .category-filter {
       overflow-y: auto;
     }
 
@@ -105,17 +116,19 @@
       line-height: 1.5;
       color: $gray-90;
       border-bottom: $gray-cool-10 1px solid;
-       
+
       #collapsible-mobile-close-button {
         @media(min-width: $medium-screen) {
           display: none;
         }
+
         width: rem(10);
         height: rem(10);
         background-color: white;
         padding: 0;
         right: 0;
         position: absolute;
+
         svg {
           width: rem(10);
           height: rem(10);
@@ -271,6 +284,7 @@
   .full-search-sidebar {
     display: none;
     margin-right: rem(16);
+
     @media(min-width: $large-screen) {
       display: flex;
       flex-basis: 350px;
@@ -292,4 +306,3 @@
     display: none !important;
   }
 }
-
